@@ -51,12 +51,13 @@ sub _draw {
     Imager::i_tt_cp($self->{id},$input{image}{IMG},
 		    $input{'x'}, $input{'y'}, $input{channel}, $input{size},
 		    $input{string}, length($input{string}),$input{aa},
-                    $input{utf8}); 
+                    $input{utf8}, $input{align}); 
   } else {
     Imager::i_tt_text($self->{id}, $input{image}{IMG}, 
 		      $input{'x'}, $input{'y'}, $input{color},
 		      $input{size}, $input{string}, 
-		      length($input{string}), $input{aa}, $input{utf8}); 
+		      length($input{string}), $input{aa}, $input{utf8},
+                      $input{align}); 
   }
 }
 
