@@ -1076,6 +1076,9 @@ Revision history for Perl extension Imager.
   centre point if both 'x' and 'y' were non-zero.
 - the internal i_tags_get_string() function now acts correctly for
   integer only tags.
+- the FT1.x driver now supports the align parameter correctly.
+  Tests were added to each driver to check correct handling of the align
+  parameter.
 
 =================================================================
 
